<resources>
    <string name="app_name">Ihor Hlushko Program</string>
    <string name="action_settings">Settings</string>
    <string name="Spisok_Prodyktov">Список Продуктов:</string>
    <string name="product_opisanie">Product Description</string>
    <string name="otzivi">Reviews:</string>
    <string name="menu">Light IT</string>
    <string name="register">Register</string>
    <string name="login">Login</string>
    <string name="guest">Guest</string>
    <string name="exit_name">Exit</string>
</resources>
