<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/menu"
            android:id="@+id/textView"
            android:textColor="#000000"
            android:textSize="100dp" />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_gravity="center_horizontal"
        android:weightSum="1">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="68dp"
            android:text="@string/register"
            android:id="@+id/button"
            android:textColor="#000000"
            android:layout_weight="0.57"
            android:onClick="onClickRegister"
            android:textSize="42dp" />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_gravity="center_horizontal"
        android:weightSum="1" >

        <Button
            android:layout_width="wrap_content"
            android:layout_height="68dp"
            android:text="@string/login"
            android:id="@+id/button2"
            android:textColor="#000000"
            android:layout_weight="0.70"
            android:onClick="onClickLogin"
            android:textSize="42dp" />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_gravity="center_horizontal"
        android:weightSum="1" >

        <Button
            android:layout_width="wrap_content"
            android:layout_height="68dp"
            android:text="@string/guest"
            android:id="@+id/button3"
            android:textColor="#000000"
            android:layout_weight="0.69"
            android:onClick="onClickGuest"
            android:textSize="42dp" />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_gravity="center_horizontal"
        android:weightSum="1" >

        <Button
            android:layout_width="wrap_content"
            android:layout_height="68dp"
            android:text="@string/exit_name"
            android:id="@+id/button4"
            android:textColor="#000000"
            android:layout_weight="0.74"
            android:onClick="onClickExit"
            android:textSize="42dp" />
    </LinearLayout>

</LinearLayout>